@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX splint-3.1.2-darwin.patch 239 RMD160 fa44bf42696a535e283f86e4828cc244ea2f4acd SHA1 1c90b4001b0ca9534f9602372d7f9e346e312d3a SHA256 984319eb695fbe4a58030bf3b2492f3cb720c4c04664f085b19031c9182d9b6a
 DIST splint-3.1.2.src.tgz 2284033 RMD160 52e9786d3cbeaa437877a33b18e42b32dff3b96b SHA1 0df489cb228dcfffb149b38c57614c2c3e200501 SHA256 c78db643df663313e3fa9d565118391825dd937617819c6efc7966cdf444fb0a
-EBUILD splint-3.1.2.ebuild 719 RMD160 936d7598f39780d615174658e0880a5dd44b0727 SHA1 7f3e853ff70eb37eddd3b2c95731326c1999115f SHA256 aa0627557d0aea5baa95e20dd292c641c795386ae0c37d804e6a082e6fb399dd
-MISC ChangeLog 2754 RMD160 d3a6473c9e98f2f894bfaea411c696d308ab11b0 SHA1 1f573dd74979a438db6dbe6c226b40a6d3a4e8de SHA256 41e43396c697e7e72ce283525a32075e56368bb699d44552a565418230b9df85
-MISC metadata.xml 247 RMD160 ce510949efadc662a8bdf3f163ab8da65425031b SHA1 9e77d3a27a86999fbe9fd9c8098a6f487512cd89 SHA256 219ac51d48f3a246086b75c336a1be44caafec3dd2c86ba61a44caa6374778df
+EBUILD splint-3.1.2.ebuild 756 RMD160 1cc7f18a5cc29075503d5c7b29a39887e062b961 SHA1 2f327b9b79842ad37d45537d2a6830744e2db5cc SHA256 5011a4c5eb29b02f567068ee53473a9d7ef97ab248b793d0e0253717a69ced1f
+MISC ChangeLog 2850 RMD160 230dcb25f48b8487904c349c4e23f0c9c979bb42 SHA1 4e60dee112ff2758539a3419912ac65e7dcbce8d SHA256 64dfe15811567ad34cbfd594b01eb9bfe518232fbad1c610b729cd1034626d6c
+MISC metadata.xml 226 RMD160 b964bea76fbaa2630cc19bcaa9ca5c1897ab3fd3 SHA1 6dae456ea7afc611bbcf681ccf8272b65636386a SHA256 88817c5db4b254f26efc82b473413bba06447886ec74fce421d23f9e2fce32d3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (SunOS)
+
+iEYEARECAAYFAk+3cSEACgkQX3X2B8XHTon56ACcCeDVbnx2B8d+VZq6AwQDxw4h
+SgQAn1/a5Th/Rife5lMiRiIbc9NQjks5
+=kcms
+-----END PGP SIGNATURE-----
