@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/splint/splint-3.1.2.ebuild,v 1.10 2008/02/27 11:11:01 coldwind Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/splint/splint-3.1.2.ebuild,v 1.11 2012/03/21 16:54:18 jer Exp $
 
 inherit eutils
 
@@ -13,7 +13,11 @@ SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
 IUSE=""
 
-DEPEND=""
+DEPEND="
+	sys-devel/flex
+	virtual/yacc
+"
+RDEPEND=""
 
 src_unpack() {
 	unpack ${A}
